--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16"
   },
+  "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
+  },
   "keywords": []
 }
